# Progetto/backend/swagger.json
@@ -1021,9 +1021,6 @@
                   },
                   "scadenza": {
                     "example": "any"
-                  },
-                  "cvv": {
-                    "example": "any"
                   }
                 }
               }
@@ -1061,6 +1058,133 @@
           },
           "404": {
             "description": "Not Found"
+          }
+        }
+      }
+    },
+    "/user/{id}/ordine": {
+      "post": {
+        "description": "Crea un nuovo ordine per l'utente",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "api_key",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "ristoranteId": {
+                    "example": "any"
+                  },
+                  "metodoRitiro": {
+                    "example": "any"
+                  },
+                  "indirizzoConsegna": {
+                    "example": "any"
+                  },
+                  "metodoPagamento": {
+                    "example": "any"
+                  },
+                  "prodotti": {
+                    "example": "any"
+                  },
+                  "nomeCliente": {
+                    "example": "any"
+                  },
+                  "cognomeCliente": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/ordine/{id}": {
+      "get": {
+        "description": "Recupera un ordine per ID",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/user/{id}/ristorante/ordini": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "api_key",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
